# website-base-backend

./: .dockerignore  .env.example  .envrc  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_COMPOSE_README.md  Dockerfile  Dockerfile.frontend.dev  Makefile  README.md  README.old.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-run.sh  fix-frontend-docker.sh  fly.toml  index.html  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pull-repos.sh  pyproject.toml  readme.md  requirements.txt  setup.sh  vite.config.ts
.github/: pull_request_template.md
.github/.devcontainer/: devcontainer.json
.github/workflows/: fly.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_customuser_dccuser.py  0003_profile_dccuser_profile.py  0004_dccpermission_dccpermissions_dccgroup.py  0005_delete_dccpermissions.py  0006_dccgroup_description_dccpermission_description_and_more.py  0007_alter_dccgroup_options_and_more.py
core/: models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_refreshtoken.py  0003_profile.py  0004_delete_profile.py  0005_address_and_profile_update.py
core/templatetags/: render_vite_bundle.py
docs/: APIs.md
project/: asgi.py  settings.py  urls.py  views.py
public_api/: asgi.py  authenticate.py  new_urls.py  settings.py  urls.py  views.py  wsgi.py
react/: App.tsx  Staging.tsx  main.tsx
server/server/: settings.py  views.py
static/: style.css
templates/: base.html
(+3 files in other folders)
