[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Daniel X <xuboxdan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = { version = "^5.0.4", python = "^3.10" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
